@@ -138,6 +138,12 @@ optimization.verbose=3
 # Should we write the resulting tree? none or file name.
 output.tree.file = $(DATA)ML.dnd
 
+# Alignment information log file (site specific rates, etc):
+output.infos = $(DATA).infos
+
+# Write numerical parameter estimated values:
+output.estimates = $(DATA).params.txt
+
 # Bootstrap:
 bootstrap.number = 0
 # Tell if numerical parameters should be kept to their initial value when bootstrapping: 
