@@ -1,3 +1,7 @@
+11/01/08 Julien Dutheil
+* Compatibility update
+* bppML now output more handy parameter values.
+
 31/12/07 Julien Dutheil
 * New program Phylo Sampler.
 
